--- a/index.html
+++ b/index.html
@@ -3,24 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Website</title>
+    <title>My Test Website</title>
     <style>
         body {
             font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            color: #333;
             text-align: center;
-            background-color: #f4f4f4;
-            padding-top: 50px;
+            padding: 50px;
         }
         h1 {
-            color: #333;
-        }
-        p {
-            color: #555;
+            color: #007BFF;
         }
     </style>
 </head>
 <body>
     <h1>Hello World!</h1>
-    <p>This is my first GitHub Pages site 🎉</p>
+    <p>This is my first GitHub Pages site.</p>
 </body>
 </html>
