--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Test Website</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>My Test Site with AI</title>
+  <style>
+    html, body { height: 100%; margin: 0; }
+    .chat-frame { width: 100%; height: 100vh; border: 0; }
+  </style>
 </head>
 <body>
-    <h1>This is a test page</h1>
+  <iframe
+    class="chat-frame"
+    src="https://udify.app/chatbot/e1JMVyly0pFQKUqo"
+    allow="microphone"
+    loading="lazy">
+  </iframe>
+  <noscript><p>Please enable JavaScript to use the chat.</p></noscript>
 </body>
 </html>
