--- a/index.html
+++ b/index.html
@@ -3,19 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>My Test Site with AI</title>
-  <style>
-    html, body { height: 100%; margin: 0; }
-    .chat-frame { width: 100%; height: 100vh; border: 0; }
-  </style>
+  <title>AI Agent Test</title>
 </head>
-<body>
+<body style="margin:0;">
   <iframe
-    class="chat-frame"
     src="https://udify.app/chatbot/e1JMVyly0pFQKUqo"
-    allow="microphone"
-    loading="lazy">
+    style="width: 100%; height: 100%; min-height: 700px;"
+    frameborder="0"
+    allow="microphone">
   </iframe>
-  <noscript><p>Please enable JavaScript to use the chat.</p></noscript>
 </body>
 </html>
