--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>AI Agent Test</title>
+  <style>html,body{height:100%;margin:0}</style>
 </head>
-<body style="margin:0;">
+<body>
+  <div style="padding:8px;font:14px/1.4 sans-serif;color:#444">
+    If you can read this, the page is loading. If the chat doesn’t appear below, the iframe is being blocked.
+  </div>
   <iframe
     src="https://udify.app/chatbot/e1JMVyly0pFQKUqo"
     style="width: 100%; height: 100%; min-height: 700px;"
